--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
 body {
-  background-image: url('https://media-exp1.licdn.com/dms/image/C5612AQF1xesRQQLHuw/article-cover_image-shrink_720_1280/0/1520133565148?e=1620864000&v=beta&t=_nO3apUbl7BWRT32xCBvzr1YZV5px8WuQdxI2_3Hotc');
+  background-image: url('./public/pizza-bg.jpg');
   background-attachment: fixed;
   background-size: cover;
 }
